# labelimage-tools

./: .gitignore  README.md  pyproject.toml
docs/: cookbook.md
examples/: 01_graph_coloring.py  02_preprocessing_gallery.py  03_junctions_and_contours.py
samples/: test_cells2D.tif
src/labelimage_tools/: __init__.py  _bbox.py  adjacency.py  coloring.py  contours.py  io.py  junctions.py  plotting.py  preprocessing.py  typing.py  validation.py
tests/: conftest.py  test_adjacency.py  test_bbox.py  test_coloring.py  test_contours.py  test_io.py  test_junctions.py  test_plotting.py  test_preprocessing.py  test_validation.py
