[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "labelimage-tools"
version = "0.1.0"
description = "Utilities for 2-D labeled tissue segmentation images"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-image>=0.21",
  "matplotlib>=3.7",
  "pillow>=9",
  "networkx>=3.0",
  "numba>=0.57",
]

[project.optional-dependencies]
test = ["pytest>=7"]
dev = ["pytest>=7", "ruff>=0.5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
